Handle marcas for novatec construcción

--- a/content/novatec-construccion/adherentes/adherentes-epoxicos/euco-455-452-mv.md
+++ b/content/novatec-construccion/adherentes/adherentes-epoxicos/euco-455-452-mv.md
@@ -1,7 +1,7 @@
 +++
 title = "Euco 455/452 Mv"
 id = 18
-marcas = ["Euclid Chemical"]
+ncmarcas = ["Euclid Chemical"]
 draft = false
 imagen = "/images/construccion/19.jpg"
 +++
