--- a/content/novatec-construccion/impermeabilizacion/poliuretanos/vulkem-350-345-346.md
+++ b/content/novatec-construccion/impermeabilizacion/poliuretanos/vulkem-350-345-346.md
@@ -1,7 +1,7 @@
 +++
 title = "Vulkem 350/345/346"
 id = 12
-marcas = ["Tremco"]
+ncmarcas = ["Tremco"]
 draft = false
 imagen = "/images/construccion/12.jpg"
 +++
