--- a/content/novatec-construccion/proteccion-contra-fuego/sellos-corta-fuego/fs701.md
+++ b/content/novatec-construccion/proteccion-contra-fuego/sellos-corta-fuego/fs701.md
@@ -1,7 +1,7 @@
 +++
 title = "FS701"
 id = 43
-marcas = ["Tremco-Illbruck"]
+ncmarcas = ["Tremco-Illbruck"]
 draft = false
 imagen = "/images/construccion/44.jpg"
 +++
