--- a/content/novatec-construccion/proteccion-contra-fuego/revestimientos-intumesentes/s707.md
+++ b/content/novatec-construccion/proteccion-contra-fuego/revestimientos-intumesentes/s707.md
@@ -1,7 +1,7 @@
 +++
 title = "S707"
 id = 45
-marcas = ["Tremco-Illbruck"]
+ncmarcas = ["Tremco-Illbruck"]
 draft = false
 imagen = "/images/construccion/46.jpg"
 +++
