--- a/content/novatec-construccion/proteccion-contra-fuego/sellos-intumesentes/fs705.md
+++ b/content/novatec-construccion/proteccion-contra-fuego/sellos-intumesentes/fs705.md
@@ -1,7 +1,7 @@
 +++
 title = "FS705"
 id = 44
-marcas = ["Tremco-Illbruck"]
+ncmarcas = ["Tremco-Illbruck"]
 draft = false
 imagen = "/images/construccion/45.jpg"
 +++
